test/ingress-test/nginx-test/ingress-nginx-ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress                       
metadata:
  name: nh-ingress-example     
  namespace: nh-name
spec:       
  ingressClassName: nginx                    
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/nh"
        backend:                  
          service:
            name: nginx-test-service
            port: 
              number: 80
